--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "react-native": "*",
     "react-native-gesture-handler": "^1.0.0",
     "react-native-reanimated": "^1.0.0-alpha",
-    "react-native-screens": "^1.0.0 || ^1.0.0-alpha",
+    "react-native-screens": "^1.0.0 || ^1.0.0-alpha || ^2.0.0-alpha",
     "react-navigation": "^4.0.7"
   },
   "husky": {
